2007-04-14  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_id.c: (ViaDoubleCheckCLE266Revision),
	(ViaCheckCardId):

	VN -> VM, message tweaks, and trailing white space fixes.

2007-03-04  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via.man:

	Textual tweaks and options ordered alphabetically.

2007-02-16  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_accel.c: (viaSetClippingRectangle),
	(viaAccelSolidHelper), (viaAccelCopyHelper),
	(viaSubsequentMono8x8PatternFillRect),
	(viaSubsequentColor8x8PatternFillRect),
	(viaSubsequentSolidTwoPointLine), (viaSubsequentSolidHorVertLine):

	Limit x value to sixteen bits.  Fixes a rendering glitch reported
	by Marg Huijgen <mark-dot-sf-dot-net-at-huijgen-dot-tk>; solution
	found by Thomas.

2007-02-10  Thomas Hellström  <thomas-at-tungstengraphics-dot-com>
	
	* unichrome/via_accel.c: (viaFlushDRIEnabled),
	(viaSubsequentSolidTwoPointLine):

	Fix line-clipping bug reported by Manuel Bilderbeek
	<manuel-dot-bilderbeek-at-oce-dot-com>.
	
2007-02-06  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c:

	Try CR39 when CR34 says zero during memory detection on
	the CLE266.  Idea from Luc Verhaegen, patch by Mark Huijgen
	<mark-dot-sf-dot-net-at-huijgen-dot-tk>.

2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* ChangeLog

	Switch encoding of ChangeLog file to Unicode.
	Whitespace and format adjustments.

2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIALoadRgbLut), (VIALoadPalette),
	(VIAScreenInit):

	Add ability to change gamma setting.  Original patch by
	Gonzalo A. de la Vega <gadelavega-at-gmail-dot-com>,
	adapted	from Luc Verhaegen's implementation.

2006-12-28  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaExaTexUploadToScreen):

	Work around an obscure hardware limitation when texturing from
	AGP.
